image text wrap and profile update as well as sidebar fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,50 @@
-body {
-    background-image: url("./assets/images/stardust.png");
-    margin-bottom: 60px;
-}
-
 html {
   position: relative;
   min-height: 100%;
+}
+
+body {
+    background-image: url("./assets/images/stardust.png");
+    margin-bottom: 80px;
+}
+
+
+.brdr-thinsolid-ddd{
+  border: thin solid #ddd;
 }
 
 .h60{
   height: 60px;
 }
 
-.w60{
-  width: 60px; 
+.pad10{
+  padding: 10px;
+}
+
+.pad20{
+  padding: 20px;
+}
+
+.padleft40{
+  padding-left: 40px;
+}
+
+.padright24{
+  padding-right: 24px;
+}
+.padbot224{
+  padding-left: 24px;
+}
+
+.profiletext{
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  color: #777777;
+  font-size: 16px;
+  line-height: 24px;
 }
   
 .stickyfooter{
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 60px;
@@ -30,4 +57,8 @@ html {
   width: 100%;
   text-align: center;
   height: 60px;
+}
+
+.w60{
+  width: 60px; 
 }
